--- a/src/Order.Api/appsettings.json
+++ b/src/Order.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BusSettings": {
+    "Kafka": {
+      "BootstrapServers": "localhost:7000,localhost:7001,localhost:7002"
+    }
+  }
 }
