--- a/src/Stock.Api/Stock.Api.csproj
+++ b/src/Stock.Api/Stock.Api.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Shared.Events\Shared.Events.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
